<resources>
    <string name="app_name">ft hangout v0.3</string>
    <string name="blank">default</string>
    <string name="contact_picture">contact picture</string>
    <string name="logo_desc">logo description</string>
    <string name="delete_conversation">delete conversation</string>
    <string name="create_contact">create contact</string>
    <string name="settings">settings</string>
    <string name="send_message">Send</string>
    <string name="enter_message_her">Enter your message here</string>
    <string name="see_contact">see contacts</string>
    <string name="rec">Record</string>
    <string name="put_lastname">Enter last name</string>
    <string name="enter_firstname">Enter first name</string>
    <string name="enter_phone">Enter phone number</string>
    <string name="phone">Phone number</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="select_a_picture">Select a photo</string>
    <string name="select_picture">selected photo</string>
    <string name="add_new_contact">Add a new contact</string>
    <string name="extended_fab_edit_contact">new contact edit button</string>
    <string name="edit_contact">edit</string>
    <string name="already_use_number">number already used</string>
    <string name="contact_edition">contact edition</string>
    <string name="search_contacts">search contacts</string>
    <string name="yours_contact">your contacts</string>
    <string name="delete_contact">delete</string>
    <string name="french_flag">french flag</string>
    <string name="english_flag">english flag</string>
    <string name="app_was_put_in_background_at">"App was put in background at: "</string>
    <string name="phone_logo">phone logo</string>
    <string name="validate">Validate</string>
    <string name="Change_lanugage">Change language</string>
    <string name="Change_language">Change language</string>
    <string name="Change_color">Change color</string>
</resources>
