<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="2"
            android:contentDescription="@string/contact_picture"
            android:src="@drawable/default_profile_picture" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pseudo"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/blank"
                android:textColor="#000000"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/blank" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edit_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_contact" />

        <Button
            android:id="@+id/open_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send_message" />

        <Button
            android:id="@+id/delete_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_contact" />

    </LinearLayout>

</LinearLayout>